--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -14,3 +14,9 @@
   margin-bottom: 0;
   color: var(--footer-color);
 }
+
+@media (max-width: 768px) {
+  .footer p {
+    font-size: 16px;
+  }
+}
